k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
  namespace: devops-demo

spec:
  selector:
    app: boardgame

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
